Developed code to make USDA search results appear cleanly in the appropriate UI section with scroll functionality;  Also coded to ability to click on a result and execute API query to get matching food item by FDC ID;  Restructured some sections in INDEX.HTML to ne support next phases of development.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 #usdaGeneral, #usdaSpecific, #foodProfile, #foodRecipes {
 }
 
-.api-results {
+.scrolling {
     overflow-y: auto;
     white-space: nowrap;
     max-height: 25vh;
@@ -17,4 +17,8 @@ footer {
     padding: 10px;
     background-color: darkgray;
     color: white
+}
+
+.usda-result-gen {
+    
 }
